--- a/site/package.json
+++ b/site/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@next/font": "13.1.6",
+    "framer-motion": "^9.0.4",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
