--- a/site/package.json
+++ b/site/package.json
@@ -17,7 +17,11 @@
     "@esri/react-arcgis": "^5.2.0",
     "@next/font": "13.1.6",
     "framer-motion": "^9.0.4",
+    "jhcluster": "^1.0.2",
+    "ml": "^6.0.0",
+    "ml-hclust": "^3.1.0",
     "next": "13.1.6",
+    "node-kmeans": "^1.1.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "resize-observer-polyfill": "^1.5.1"
