--- a/site/package.json
+++ b/site/package.json
@@ -15,9 +15,13 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@esri/react-arcgis": "^5.2.0",
+    "@fontsource/inter": "^4.5.15",
+    "@fontsource/nunito": "^4.5.12",
+    "@fontsource/raleway": "^4.5.12",
     "@next/font": "13.1.6",
     "framer-motion": "^9.0.4",
     "next": "13.1.6",
+    "node-kmeans": "^1.1.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "resize-observer-polyfill": "^1.5.1"
