improve landing page

--- a/site/package.json
+++ b/site/package.json
@@ -29,6 +29,7 @@
     "react-simple-typewriter": "^5.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "three": "^0.149.0",
-    "three-globe": "^2.25.4"
+    "three-globe": "^2.25.4",
+    "typewriter-effect": "^2.19.0"
   }
 }
