--- a/site/package.json
+++ b/site/package.json
@@ -12,6 +12,7 @@
     "@arcgis/core": "^4.25.5",
     "@chakra-ui/icons": "^2.0.17",
     "@chakra-ui/react": "^2.5.1",
+    "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@esri/react-arcgis": "^5.2.0",
@@ -19,15 +20,20 @@
     "@fontsource/nunito": "^4.5.12",
     "@fontsource/raleway": "^4.5.12",
     "@next/font": "13.1.6",
+    "@react-three/fiber": "^8.11.2",
     "d3": "^7.8.2",
     "framer-motion": "^9.0.4",
     "next": "13.1.6",
     "node-kmeans": "^1.1.9",
+    "nookies": "^2.5.2",
+    "popmotion": "^11.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-globe.gl": "^2.23.3",
     "react-simple-typewriter": "^5.0.1",
     "resize-observer-polyfill": "^1.5.1",
+    "stylis": "^4.1.3",
+    "stylis-plugin-rtl": "^2.1.1",
     "three": "^0.149.0",
     "three-globe": "^2.25.4",
     "typewriter-effect": "^2.19.0"
