--- a/site/package.json
+++ b/site/package.json
@@ -24,6 +24,7 @@
     "d3": "^7.8.2",
     "framer-motion": "^9.0.4",
     "jspdf": "^2.5.1",
+    "lottie-react": "^2.3.1",
     "next": "13.1.6",
     "node-kmeans": "^1.1.9",
     "nookies": "^2.5.2",
