--- a/site/package.json
+++ b/site/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-globe.gl": "^2.23.3",
+    "react-icons": "^4.7.1",
     "react-simple-typewriter": "^5.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "stylis": "^4.1.3",
