--- a/site/package.json
+++ b/site/package.json
@@ -23,6 +23,7 @@
     "@react-three/fiber": "^8.11.2",
     "d3": "^7.8.2",
     "framer-motion": "^9.0.4",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lottie-react": "^2.3.1",
     "next": "13.1.6",
